kubernetes/gabernetes/apps/nextcloud/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
      name: envoy-public
  hostnames:
    - ${app_url}
  rules:
    - backendRefs:
        - kind: Service
          name: nextcloud
          port: 8080
